vendor/stele/example/calc.run.garbage.expected
Error: Expecting a program: a '{' block.
 --> garbage.calc:1:1
1 | )
  · ^
